<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.example.android_basic.viewmodel.ViewModelCheckOut" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/ToolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:title="Đơn Hàng"

            />

        <TextView
            android:id="@+id/TextName"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="20.68dp"
            android:text="@string/user_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.03"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ToolBar"
            app:layout_constraintVertical_bias="0"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:helperText="@{viewmodel.requiredName}"
            app:helperTextTextColor="#FF0000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.07"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TextName"
            app:layout_constraintVertical_bias="0">

            <EditText
                android:id="@+id/CheckName"
                android:layout_width="match_parent"
                android:layout_height="41.19dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="Nhập tên của bạn"
                android:text="@={viewmodel.inputName}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_percent="0.07"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/TextName"
                app:layout_constraintVertical_bias="0"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/TextPhone"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="20.68dp"
            android:text="@string/phonenumber"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.03"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Name"
            app:layout_constraintVertical_bias="0.03" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:helperText="@{viewmodel.requiredPhone}"
            app:helperTextTextColor="#FF0000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.07"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TextPhone"
            app:layout_constraintVertical_bias="0">

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="Nhập số điện thoại"
                android:inputType="number"
                android:text="@={viewmodel.inputPhone}"

                tools:ignore="TextFields" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/TextEmail"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="20.68dp"
            android:text="@string/user_email"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.03"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Phone"
            app:layout_constraintVertical_bias="0.03" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:helperText="@{viewmodel.requiredEmail}"
            app:helperTextTextColor="#FF0000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.07"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TextEmail"
            app:layout_constraintVertical_bias="0">

            <EditText
                android:id="@+id/InputEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="nhập chus thich của bạn"
                android:text="@={viewmodel.inputEmail}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_percent="0.07"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/TextEmail"
                app:layout_constraintVertical_bias="0" />


        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/TextPassWord"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="20.68dp"
            android:text="Address"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.03"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Email"
            app:layout_constraintVertical_bias="0.03" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:helperText="@{viewmodel.requiredAddress}"
            app:helperTextTextColor="#FF0000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TextPassWord"
            app:layout_constraintVertical_bias="0">

            <EditText
                android:id="@+id/InputPassWord"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="Nhập địa chỉ nhận hàng"
                android:text="@={viewmodel.inputAddress}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_percent="0.07"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/TextPassWord"
                app:layout_constraintVertical_bias="0" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/Total"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/border"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address"
            app:layout_constraintVertical_bias="0.288"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="40sp"
            />

        <Button
            android:id="@+id/check"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/border_button"
            android:text="@string/complete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.06"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Total"
            app:layout_constraintWidth_percent="0.5"
            android:onClick="@{()->viewmodel.checkOut()}"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>